formatting improved and refactor for JAVA 8